@startuml
title LittleZelda Class Diagram

' Classes
class Character {
  - name: String
  - xLoc: int
  - yLoc: int
  + setName(name)
  + getName(): String
  + moveNorth()
  + moveSouth()
  + moveEast()
  + moveWest()
}

class Player {
  - health: int
  - satchelItems: ArrayList<String>
  + addToSatchel(item)
  + getInventory()
  + checkIfInSatchel(item): boolean
  + addHealth(int)
  + subtractHealth(int)
}

class NonPlayableCharacter {
  - mood: String
  + getMood(): String
}

class InteractiveItem {
  - name: String
  - description: String
  - matchingItem: String
  + getName(): String
  + getDescription(): String
  + getMatchingItem(): String
}

class Location {
  - name: String
  - description: String
  - items: ArrayList<String>
  - hasNPC: boolean
  - npc: NonPlayableCharacter
  - interactiveItem: InteractiveItem
  + addItem(item)
  + removeItem(item): boolean
  + getNonPlayableCharacter(): NonPlayableCharacter
  + getInteractiveItem(): InteractiveItem
  + toString(): String
}

class LittleZeldaGame {
  - map: Location[][]
  - mainPlayer: Player
  - hestu: NonPlayableCharacter
  - bokoblin: NonPlayableCharacter
  - korok: NonPlayableCharacter
  - chest: InteractiveItem
  + start()
  + createMap()
  + createCharacters()
  + gameLogic()
}

class LittleZelda {
  + main(args)
}

' Inheritance
Player --|> Character
NonPlayableCharacter --|> Character

' Associations
Location "1" *-- "0..*" String : items
Location o-- "0..1" NonPlayableCharacter : npc
Location o-- "0..1" InteractiveItem : interactiveItem

LittleZeldaGame o-- "1" Location : map
LittleZeldaGame o-- "1" Player : mainPlayer
LittleZeldaGame o-- "0..*" NonPlayableCharacter : npcs
LittleZeldaGame o-- "0..*" InteractiveItem : items

LittleZelda ..> LittleZeldaGame : starts

@enduml
